--- a/dreamshell-backend/package.json
+++ b/dreamshell-backend/package.json
@@ -7,16 +7,21 @@
     "dev": "tsx src/index.ts"
   },
   "dependencies": {
+    "argon2": "^0.44.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.44.4",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.6",
     "pg": "^8.11.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.11.24",
+    "@types/nodemailer": "^7.0.1",
     "@types/pg": "^8.15.5",
     "tsx": "^4.15.7",
     "typescript": "^5.4.0"
