--- a/dreamshell-backend/package.json
+++ b/dreamshell-backend/package.json
@@ -4,15 +4,20 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "tsx src/index.ts"
+    "dev": "tsx src/index.ts",
+    "start": "tsx src/index.ts",
+    "build": "tsc",
+    "keep-alive": "tsx src/keep-alive.ts"
   },
   "dependencies": {
+    "@types/node-fetch": "^2.6.13",
     "argon2": "^0.44.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.44.4",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.6",
     "pg": "^8.11.5"
   },
